// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
<Button
  label="Button label"
  onClick={[Function]}
  styling="normal-blue btn"
>
  <div>
    <button
      className="normal-blue btn"
      onClick={[Function]}
      type="button"
    >
      Button label
    </button>
  </div>
</Button>
`;

exports[`Storyshots Button Mobile 1`] = `
<Button
  label="Button label"
  onClick={[Function]}
  styling="normal-blue btn"
>
  <div>
    <button
      className="normal-blue btn"
      onClick={[Function]}
      type="button"
    >
      Button label
    </button>
  </div>
</Button>
`;

exports[`Storyshots ConfirmationPopup Default 1`] = `
<ConfirmationPopup
  cancelButton={
    Object {
      "cancelLabel": "No, resume my process please",
      "cancelStyling": "normal-white btn consistent-width",
    }
  }
  confirmButton={
    Object {
      "confirmLabel": "Yes, cancel my process please",
      "confirmStyling": "normal-blue btn consistent-width",
    }
  }
  mainButton={
    Object {
      "mainLabel": "main label",
      "mainStyling": "normal-blue btn",
    }
  }
  modal={
    Object {
      "body": [Function],
      "handleClose": [Function],
      "handleConfirm": [Function],
      "handleShow": [Function],
      "show": true,
      "title": "Cancel process?",
    }
  }
>
  <Button
    label="main label"
    onClick={[Function]}
    styling="normal-blue btn"
  >
    <div>
      <button
        className="normal-blue btn"
        onClick={[Function]}
        type="button"
      >
        main label
      </button>
    </div>
  </Button>
  <Bootstrap(Modal)
    onHide={[Function]}
    show={true}
  >
    <Modal
      animation={true}
      autoFocus={true}
      backdrop={true}
      bsPrefix="modal"
      dialogAs={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "ModalDialog",
          "render": [Function],
        }
      }
      enforceFocus={true}
      keyboard={true}
      onHide={[Function]}
      restoreFocus={true}
      show={true}
    >
      <Modal
        autoFocus={true}
        backdrop={true}
        backdropTransition={[Function]}
        className="modal"
        containerClassName="modal-open"
        enforceFocus={true}
        keyboard={true}
        manager={
          BootstrapModalManager {
            "adjustAndStore": [Function],
            "containers": Array [
              <body
                class="modal-open"
                style="padding-right: 0px;"
              >
                <div
                  class="fade modal-backdrop show"
                />
                <div
                  aria-modal="true"
                  class="fade modal show"
                  role="dialog"
                  style="display: block;"
                  tabindex="-1"
                >
                  <div
                    class="modal-dialog"
                    role="document"
                  >
                    <div
                      class="modal-content"
                    >
                      <div
                        class="hide-border padding-left modal-header"
                      >
                        <div
                          class="mt-3 larger-font modal-title h4"
                        >
                          Cancel process?
                        </div>
                        <button
                          class="close"
                          type="button"
                        >
                          <span
                            aria-hidden="true"
                          >
                            ×
                          </span>
                          <span
                            class="sr-only"
                          >
                            Close
                          </span>
                        </button>
                      </div>
                      <div
                        class="padding-left modal-body"
                      >
                        <p>
                          Your files will not be submitted.
                        </p>
                        <p>
                          You will be returned to:
                          <br />
                          <b>
                            Original
                          </b>
                           website
                        </p>
                      </div>
                      <div
                        class="mx-auto mb-5"
                      >
                        <div>
                          <button
                            class="normal-blue btn consistent-width"
                            type="button"
                          >
                            Yes, cancel my process please
                          </button>
                        </div>
                        <br />
                        <div>
                          <button
                            class="normal-white btn consistent-width"
                            type="button"
                          >
                            No, resume my process please
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>,
            ],
            "data": Array [
              Object {
                "classes": Array [
                  "modal-open",
                ],
                "modals": Array [
                  Object {
                    "add": [Function],
                    "backdrop": <div
                      class="fade modal-backdrop show"
                    />,
                    "dialog": <div
                      aria-modal="true"
                      class="fade modal show"
                      role="dialog"
                      style="display: block;"
                      tabindex="-1"
                    >
                      <div
                        class="modal-dialog"
                        role="document"
                      >
                        <div
                          class="modal-content"
                        >
                          <div
                            class="hide-border padding-left modal-header"
                          >
                            <div
                              class="mt-3 larger-font modal-title h4"
                            >
                              Cancel process?
                            </div>
                            <button
                              class="close"
                              type="button"
                            >
                              <span
                                aria-hidden="true"
                              >
                                ×
                              </span>
                              <span
                                class="sr-only"
                              >
                                Close
                              </span>
                            </button>
                          </div>
                          <div
                            class="padding-left modal-body"
                          >
                            <p>
                              Your files will not be submitted.
                            </p>
                            <p>
                              You will be returned to:
                              <br />
                              <b>
                                Original
                              </b>
                               website
                            </p>
                          </div>
                          <div
                            class="mx-auto mb-5"
                          >
                            <div>
                              <button
                                class="normal-blue btn consistent-width"
                                type="button"
                              >
                                Yes, cancel my process please
                              </button>
                            </div>
                            <br />
                            <div>
                              <button
                                class="normal-white btn consistent-width"
                                type="button"
                              >
                                No, resume my process please
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>,
                    "isTopModal": [Function],
                    "remove": [Function],
                    "setBackdropRef": [Function],
                    "setDialogRef": [Function],
                  },
                ],
                "overflowing": true,
                "style": Object {
                  "overflow": "",
                  "paddingRight": "",
                },
              },
            ],
            "handleContainerOverflow": true,
            "hideSiblingNodes": true,
            "modals": Array [
              Object {
                "add": [Function],
                "backdrop": <div
                  class="fade modal-backdrop show"
                />,
                "dialog": <div
                  aria-modal="true"
                  class="fade modal show"
                  role="dialog"
                  style="display: block;"
                  tabindex="-1"
                >
                  <div
                    class="modal-dialog"
                    role="document"
                  >
                    <div
                      class="modal-content"
                    >
                      <div
                        class="hide-border padding-left modal-header"
                      >
                        <div
                          class="mt-3 larger-font modal-title h4"
                        >
                          Cancel process?
                        </div>
                        <button
                          class="close"
                          type="button"
                        >
                          <span
                            aria-hidden="true"
                          >
                            ×
                          </span>
                          <span
                            class="sr-only"
                          >
                            Close
                          </span>
                        </button>
                      </div>
                      <div
                        class="padding-left modal-body"
                      >
                        <p>
                          Your files will not be submitted.
                        </p>
                        <p>
                          You will be returned to:
                          <br />
                          <b>
                            Original
                          </b>
                           website
                        </p>
                      </div>
                      <div
                        class="mx-auto mb-5"
                      >
                        <div>
                          <button
                            class="normal-blue btn consistent-width"
                            type="button"
                          >
                            Yes, cancel my process please
                          </button>
                        </div>
                        <br />
                        <div>
                          <button
                            class="normal-white btn consistent-width"
                            type="button"
                          >
                            No, resume my process please
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>,
                "isTopModal": [Function],
                "remove": [Function],
                "setBackdropRef": [Function],
                "setDialogRef": [Function],
              },
            ],
            "restore": [Function],
            "scrollbarSize": 0,
          }
        }
        onClick={[Function]}
        onEnter={[Function]}
        onEntering={[Function]}
        onExited={[Function]}
        onHide={[Function]}
        onMouseUp={[Function]}
        renderBackdrop={[Function]}
        restoreFocus={true}
        show={true}
        style={
          Object {
            "paddingLeft": undefined,
            "paddingRight": undefined,
          }
        }
        transition={[Function]}
      >
        <Portal
          containerInfo={
            <body
              class="modal-open"
              style="padding-right: 0px;"
            >
              <div
                class="fade modal-backdrop show"
              />
              <div
                aria-modal="true"
                class="fade modal show"
                role="dialog"
                style="display: block;"
                tabindex="-1"
              >
                <div
                  class="modal-dialog"
                  role="document"
                >
                  <div
                    class="modal-content"
                  >
                    <div
                      class="hide-border padding-left modal-header"
                    >
                      <div
                        class="mt-3 larger-font modal-title h4"
                      >
                        Cancel process?
                      </div>
                      <button
                        class="close"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                        >
                          ×
                        </span>
                        <span
                          class="sr-only"
                        >
                          Close
                        </span>
                      </button>
                    </div>
                    <div
                      class="padding-left modal-body"
                    >
                      <p>
                        Your files will not be submitted.
                      </p>
                      <p>
                        You will be returned to:
                        <br />
                        <b>
                          Original
                        </b>
                         website
                      </p>
                    </div>
                    <div
                      class="mx-auto mb-5"
                    >
                      <div>
                        <button
                          class="normal-blue btn consistent-width"
                          type="button"
                        >
                          Yes, cancel my process please
                        </button>
                      </div>
                      <br />
                      <div>
                        <button
                          class="normal-white btn consistent-width"
                          type="button"
                        >
                          No, resume my process please
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </body>
          }
        >
          <BackdropTransition
            appear={true}
            in={true}
          >
            <Fade
              appear={true}
              in={true}
              mountOnEnter={false}
              timeout={300}
              unmountOnExit={false}
            >
              <Transition
                addEndListener={[Function]}
                appear={true}
                enter={true}
                exit={true}
                in={true}
                mountOnEnter={false}
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                timeout={300}
                unmountOnExit={false}
              >
                <div
                  className="fade modal-backdrop show"
                  onClick={[Function]}
                />
              </Transition>
            </Fade>
          </BackdropTransition>
          <DialogTransition
            appear={true}
            in={true}
            onEnter={[Function]}
            onEntering={[Function]}
            onExited={[Function]}
            unmountOnExit={true}
          >
            <Fade
              appear={true}
              in={true}
              mountOnEnter={false}
              onEnter={[Function]}
              onEntering={[Function]}
              onExited={[Function]}
              timeout={300}
              unmountOnExit={true}
            >
              <Transition
                addEndListener={[Function]}
                appear={true}
                enter={true}
                exit={true}
                in={true}
                mountOnEnter={false}
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                timeout={300}
                unmountOnExit={true}
              >
                <div
                  aria-modal={true}
                  className="fade modal show"
                  onClick={[Function]}
                  onMouseUp={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "paddingLeft": undefined,
                      "paddingRight": undefined,
                    }
                  }
                  tabIndex={-1}
                >
                  <ModalDialog
                    onMouseDown={[Function]}
                    role="document"
                  >
                    <div
                      className="modal-dialog"
                      onMouseDown={[Function]}
                      role="document"
                    >
                      <div
                        className="modal-content"
                      >
                        <ModalHeader
                          className="hide-border padding-left"
                          closeButton={true}
                          closeLabel="Close"
                        >
                          <div
                            className="hide-border padding-left modal-header"
                          >
                            <ModalTitle
                              className="mt-3 larger-font"
                            >
                              <ForwardRef
                                className="mt-3 larger-font modal-title"
                              >
                                <div
                                  className="mt-3 larger-font modal-title h4"
                                >
                                  Cancel process?
                                </div>
                              </ForwardRef>
                            </ModalTitle>
                            <CloseButton
                              label="Close"
                              onClick={[Function]}
                            >
                              <button
                                className="close"
                                onClick={[Function]}
                                type="button"
                              >
                                <span
                                  aria-hidden="true"
                                >
                                  ×
                                </span>
                                <span
                                  className="sr-only"
                                >
                                  Close
                                </span>
                              </button>
                            </CloseButton>
                          </div>
                        </ModalHeader>
                        <ModalBody
                          className="padding-left"
                        >
                          <div
                            className="padding-left modal-body"
                          >
                            <p>
                              Your files will not be submitted.
                            </p>
                            <p>
                              You will be returned to:
                              <br />
                              <b>
                                Original
                              </b>
                               website
                            </p>
                          </div>
                        </ModalBody>
                        <div
                          className="mx-auto mb-5"
                        >
                          <Button
                            label="Yes, cancel my process please"
                            onClick={[Function]}
                            styling="normal-blue btn consistent-width"
                          >
                            <div>
                              <button
                                className="normal-blue btn consistent-width"
                                onClick={[Function]}
                                type="button"
                              >
                                Yes, cancel my process please
                              </button>
                            </div>
                          </Button>
                          <br />
                          <Button
                            label="No, resume my process please"
                            onClick={[Function]}
                            styling="normal-white btn consistent-width"
                          >
                            <div>
                              <button
                                className="normal-white btn consistent-width"
                                onClick={[Function]}
                                type="button"
                              >
                                No, resume my process please
                              </button>
                            </div>
                          </Button>
                        </div>
                      </div>
                    </div>
                  </ModalDialog>
                </div>
              </Transition>
            </Fade>
          </DialogTransition>
        </Portal>
      </Modal>
    </Modal>
  </Bootstrap(Modal)>
</ConfirmationPopup>
`;

exports[`Storyshots ConfirmationPopup Mobile 1`] = `
<ConfirmationPopup
  cancelButton={
    Object {
      "cancelLabel": "No, resume my process please",
      "cancelStyling": "normal-white btn consistent-width",
    }
  }
  confirmButton={
    Object {
      "confirmLabel": "Yes, cancel my process please",
      "confirmStyling": "normal-blue btn consistent-width",
    }
  }
  mainButton={
    Object {
      "mainLabel": "main label",
      "mainStyling": "normal-blue btn",
    }
  }
  modal={
    Object {
      "body": [Function],
      "handleClose": [Function],
      "handleConfirm": [Function],
      "handleShow": [Function],
      "show": true,
      "title": "Cancel process?",
    }
  }
>
  <Button
    label="main label"
    onClick={[Function]}
    styling="normal-blue btn"
  >
    <div>
      <button
        className="normal-blue btn"
        onClick={[Function]}
        type="button"
      >
        main label
      </button>
    </div>
  </Button>
  <Bootstrap(Modal)
    onHide={[Function]}
    show={true}
  >
    <Modal
      animation={true}
      autoFocus={true}
      backdrop={true}
      bsPrefix="modal"
      dialogAs={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "ModalDialog",
          "render": [Function],
        }
      }
      enforceFocus={true}
      keyboard={true}
      onHide={[Function]}
      restoreFocus={true}
      show={true}
    >
      <Modal
        autoFocus={true}
        backdrop={true}
        backdropTransition={[Function]}
        className="modal"
        containerClassName="modal-open"
        enforceFocus={true}
        keyboard={true}
        manager={
          BootstrapModalManager {
            "adjustAndStore": [Function],
            "containers": Array [
              <body
                class="modal-open"
                style="padding-right: 0px;"
              >
                <div
                  class="fade modal-backdrop show"
                />
                <div
                  aria-modal="true"
                  class="fade modal show"
                  role="dialog"
                  style="display: block;"
                  tabindex="-1"
                >
                  <div
                    class="modal-dialog"
                    role="document"
                  >
                    <div
                      class="modal-content"
                    >
                      <div
                        class="hide-border padding-left modal-header"
                      >
                        <div
                          class="mt-3 larger-font modal-title h4"
                        >
                          Cancel process?
                        </div>
                        <button
                          class="close"
                          type="button"
                        >
                          <span
                            aria-hidden="true"
                          >
                            ×
                          </span>
                          <span
                            class="sr-only"
                          >
                            Close
                          </span>
                        </button>
                      </div>
                      <div
                        class="padding-left modal-body"
                      >
                        <p>
                          Your files will not be submitted.
                        </p>
                        <p>
                          You will be returned to:
                          <br />
                          <b>
                            Original
                          </b>
                           website
                        </p>
                      </div>
                      <div
                        class="mx-auto mb-5"
                      >
                        <div>
                          <button
                            class="normal-blue btn consistent-width"
                            type="button"
                          >
                            Yes, cancel my process please
                          </button>
                        </div>
                        <br />
                        <div>
                          <button
                            class="normal-white btn consistent-width"
                            type="button"
                          >
                            No, resume my process please
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>,
            ],
            "data": Array [
              Object {
                "classes": Array [
                  "modal-open",
                ],
                "modals": Array [
                  Object {
                    "add": [Function],
                    "backdrop": <div
                      class="fade modal-backdrop show"
                    />,
                    "dialog": <div
                      aria-modal="true"
                      class="fade modal show"
                      role="dialog"
                      style="display: block;"
                      tabindex="-1"
                    >
                      <div
                        class="modal-dialog"
                        role="document"
                      >
                        <div
                          class="modal-content"
                        >
                          <div
                            class="hide-border padding-left modal-header"
                          >
                            <div
                              class="mt-3 larger-font modal-title h4"
                            >
                              Cancel process?
                            </div>
                            <button
                              class="close"
                              type="button"
                            >
                              <span
                                aria-hidden="true"
                              >
                                ×
                              </span>
                              <span
                                class="sr-only"
                              >
                                Close
                              </span>
                            </button>
                          </div>
                          <div
                            class="padding-left modal-body"
                          >
                            <p>
                              Your files will not be submitted.
                            </p>
                            <p>
                              You will be returned to:
                              <br />
                              <b>
                                Original
                              </b>
                               website
                            </p>
                          </div>
                          <div
                            class="mx-auto mb-5"
                          >
                            <div>
                              <button
                                class="normal-blue btn consistent-width"
                                type="button"
                              >
                                Yes, cancel my process please
                              </button>
                            </div>
                            <br />
                            <div>
                              <button
                                class="normal-white btn consistent-width"
                                type="button"
                              >
                                No, resume my process please
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>,
                    "isTopModal": [Function],
                    "remove": [Function],
                    "setBackdropRef": [Function],
                    "setDialogRef": [Function],
                  },
                ],
                "overflowing": true,
                "style": Object {
                  "overflow": "",
                  "paddingRight": "0px",
                },
              },
            ],
            "handleContainerOverflow": true,
            "hideSiblingNodes": true,
            "modals": Array [
              Object {
                "add": [Function],
                "backdrop": <div
                  class="fade modal-backdrop show"
                />,
                "dialog": <div
                  aria-modal="true"
                  class="fade modal show"
                  role="dialog"
                  style="display: block;"
                  tabindex="-1"
                >
                  <div
                    class="modal-dialog"
                    role="document"
                  >
                    <div
                      class="modal-content"
                    >
                      <div
                        class="hide-border padding-left modal-header"
                      >
                        <div
                          class="mt-3 larger-font modal-title h4"
                        >
                          Cancel process?
                        </div>
                        <button
                          class="close"
                          type="button"
                        >
                          <span
                            aria-hidden="true"
                          >
                            ×
                          </span>
                          <span
                            class="sr-only"
                          >
                            Close
                          </span>
                        </button>
                      </div>
                      <div
                        class="padding-left modal-body"
                      >
                        <p>
                          Your files will not be submitted.
                        </p>
                        <p>
                          You will be returned to:
                          <br />
                          <b>
                            Original
                          </b>
                           website
                        </p>
                      </div>
                      <div
                        class="mx-auto mb-5"
                      >
                        <div>
                          <button
                            class="normal-blue btn consistent-width"
                            type="button"
                          >
                            Yes, cancel my process please
                          </button>
                        </div>
                        <br />
                        <div>
                          <button
                            class="normal-white btn consistent-width"
                            type="button"
                          >
                            No, resume my process please
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>,
                "isTopModal": [Function],
                "remove": [Function],
                "setBackdropRef": [Function],
                "setDialogRef": [Function],
              },
            ],
            "restore": [Function],
            "scrollbarSize": 0,
          }
        }
        onClick={[Function]}
        onEnter={[Function]}
        onEntering={[Function]}
        onExited={[Function]}
        onHide={[Function]}
        onMouseUp={[Function]}
        renderBackdrop={[Function]}
        restoreFocus={true}
        show={true}
        style={
          Object {
            "paddingLeft": undefined,
            "paddingRight": undefined,
          }
        }
        transition={[Function]}
      >
        <Portal
          containerInfo={
            <body
              class="modal-open"
              style="padding-right: 0px;"
            >
              <div
                class="fade modal-backdrop show"
              />
              <div
                aria-modal="true"
                class="fade modal show"
                role="dialog"
                style="display: block;"
                tabindex="-1"
              >
                <div
                  class="modal-dialog"
                  role="document"
                >
                  <div
                    class="modal-content"
                  >
                    <div
                      class="hide-border padding-left modal-header"
                    >
                      <div
                        class="mt-3 larger-font modal-title h4"
                      >
                        Cancel process?
                      </div>
                      <button
                        class="close"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                        >
                          ×
                        </span>
                        <span
                          class="sr-only"
                        >
                          Close
                        </span>
                      </button>
                    </div>
                    <div
                      class="padding-left modal-body"
                    >
                      <p>
                        Your files will not be submitted.
                      </p>
                      <p>
                        You will be returned to:
                        <br />
                        <b>
                          Original
                        </b>
                         website
                      </p>
                    </div>
                    <div
                      class="mx-auto mb-5"
                    >
                      <div>
                        <button
                          class="normal-blue btn consistent-width"
                          type="button"
                        >
                          Yes, cancel my process please
                        </button>
                      </div>
                      <br />
                      <div>
                        <button
                          class="normal-white btn consistent-width"
                          type="button"
                        >
                          No, resume my process please
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </body>
          }
        >
          <BackdropTransition
            appear={true}
            in={true}
          >
            <Fade
              appear={true}
              in={true}
              mountOnEnter={false}
              timeout={300}
              unmountOnExit={false}
            >
              <Transition
                addEndListener={[Function]}
                appear={true}
                enter={true}
                exit={true}
                in={true}
                mountOnEnter={false}
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                timeout={300}
                unmountOnExit={false}
              >
                <div
                  className="fade modal-backdrop show"
                  onClick={[Function]}
                />
              </Transition>
            </Fade>
          </BackdropTransition>
          <DialogTransition
            appear={true}
            in={true}
            onEnter={[Function]}
            onEntering={[Function]}
            onExited={[Function]}
            unmountOnExit={true}
          >
            <Fade
              appear={true}
              in={true}
              mountOnEnter={false}
              onEnter={[Function]}
              onEntering={[Function]}
              onExited={[Function]}
              timeout={300}
              unmountOnExit={true}
            >
              <Transition
                addEndListener={[Function]}
                appear={true}
                enter={true}
                exit={true}
                in={true}
                mountOnEnter={false}
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                timeout={300}
                unmountOnExit={true}
              >
                <div
                  aria-modal={true}
                  className="fade modal show"
                  onClick={[Function]}
                  onMouseUp={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "paddingLeft": undefined,
                      "paddingRight": undefined,
                    }
                  }
                  tabIndex={-1}
                >
                  <ModalDialog
                    onMouseDown={[Function]}
                    role="document"
                  >
                    <div
                      className="modal-dialog"
                      onMouseDown={[Function]}
                      role="document"
                    >
                      <div
                        className="modal-content"
                      >
                        <ModalHeader
                          className="hide-border padding-left"
                          closeButton={true}
                          closeLabel="Close"
                        >
                          <div
                            className="hide-border padding-left modal-header"
                          >
                            <ModalTitle
                              className="mt-3 larger-font"
                            >
                              <ForwardRef
                                className="mt-3 larger-font modal-title"
                              >
                                <div
                                  className="mt-3 larger-font modal-title h4"
                                >
                                  Cancel process?
                                </div>
                              </ForwardRef>
                            </ModalTitle>
                            <CloseButton
                              label="Close"
                              onClick={[Function]}
                            >
                              <button
                                className="close"
                                onClick={[Function]}
                                type="button"
                              >
                                <span
                                  aria-hidden="true"
                                >
                                  ×
                                </span>
                                <span
                                  className="sr-only"
                                >
                                  Close
                                </span>
                              </button>
                            </CloseButton>
                          </div>
                        </ModalHeader>
                        <ModalBody
                          className="padding-left"
                        >
                          <div
                            className="padding-left modal-body"
                          >
                            <p>
                              Your files will not be submitted.
                            </p>
                            <p>
                              You will be returned to:
                              <br />
                              <b>
                                Original
                              </b>
                               website
                            </p>
                          </div>
                        </ModalBody>
                        <div
                          className="mx-auto mb-5"
                        >
                          <Button
                            label="Yes, cancel my process please"
                            onClick={[Function]}
                            styling="normal-blue btn consistent-width"
                          >
                            <div>
                              <button
                                className="normal-blue btn consistent-width"
                                onClick={[Function]}
                                type="button"
                              >
                                Yes, cancel my process please
                              </button>
                            </div>
                          </Button>
                          <br />
                          <Button
                            label="No, resume my process please"
                            onClick={[Function]}
                            styling="normal-white btn consistent-width"
                          >
                            <div>
                              <button
                                className="normal-white btn consistent-width"
                                onClick={[Function]}
                                type="button"
                              >
                                No, resume my process please
                              </button>
                            </div>
                          </Button>
                        </div>
                      </div>
                    </div>
                  </ModalDialog>
                </div>
              </Transition>
            </Fade>
          </DialogTransition>
        </Portal>
      </Modal>
    </Modal>
  </Bootstrap(Modal)>
</ConfirmationPopup>
`;

exports[`Storyshots Footer Default 1`] = `
<Footer>
  <footer
    className="footer"
  >
    <nav
      className="navbar navbar-expand-sm navbar-dark justify-content-end"
    >
      <FooterToggler>
        <button
          className="navbar-toggler"
          data-target="#footerBar"
          data-toggle="collapse"
          type="button"
        >
          <span
            className="navbar-toggler-icon"
          />
        </button>
      </FooterToggler>
      <div
        className="collapse navbar-collapse flex-grow-0"
        id="footerBar"
      >
        <ul
          className="navbar-nav text-right"
        >
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca"
              rel="noopener noreferrer"
              target="_blank"
            >
              BC Government
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/disclaimer"
              rel="noopener noreferrer"
              target="_blank"
            >
              Disclaimer
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/privacy"
              rel="noopener noreferrer"
              target="_blank"
            >
              Privacy
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/accessibility"
              rel="noopener noreferrer"
              target="_blank"
            >
              Accessibility
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/copyright"
              rel="noopener noreferrer"
              target="_blank"
            >
              Copyright
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </footer>
</Footer>
`;

exports[`Storyshots Footer Mobile 1`] = `
<Footer>
  <footer
    className="footer"
  >
    <nav
      className="navbar navbar-expand-sm navbar-dark justify-content-end"
    >
      <FooterToggler>
        <button
          className="navbar-toggler"
          data-target="#footerBar"
          data-toggle="collapse"
          type="button"
        >
          <span
            className="navbar-toggler-icon"
          />
        </button>
      </FooterToggler>
      <div
        className="collapse navbar-collapse flex-grow-0"
        id="footerBar"
      >
        <ul
          className="navbar-nav text-right"
        >
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca"
              rel="noopener noreferrer"
              target="_blank"
            >
              BC Government
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/disclaimer"
              rel="noopener noreferrer"
              target="_blank"
            >
              Disclaimer
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/privacy"
              rel="noopener noreferrer"
              target="_blank"
            >
              Privacy
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/accessibility"
              rel="noopener noreferrer"
              target="_blank"
            >
              Accessibility
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/copyright"
              rel="noopener noreferrer"
              target="_blank"
            >
              Copyright
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </footer>
</Footer>
`;

exports[`Storyshots Header Default 1`] = `
<Header
  header={
    Object {
      "history": Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "testkey",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "testkey",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      },
      "name": "File Submission",
    }
  }
>
  <header>
    <nav
      className="container-fluid navbar navbar-expand-lg navbar-dark"
    >
      <div
        aria-labelledby="title"
        className="navbar-brand pointer"
      />
      <img
        alt="B.C. Government Logo"
        className="img-fluid d-none d-md-block pointer"
        height="44"
        onClick={[Function]}
        onKeyDown={[Function]}
        src="undefined/images/bcid-logo-rev-en.svg"
        width={181}
      />
      <img
        alt="B.C. Government Logo"
        className="img-fluid d-md-none pointer"
        height="44"
        onClick={[Function]}
        onKeyDown={[Function]}
        src="undefined/images/bcid-symbol-rev.svg"
        width={64}
      />
      <div
        aria-labelledby="title"
        className="pointer navbar-brand nav-item nav-link"
      />
      <div
        className="navbar-brand"
        id="title"
      >
        File Submission
      </div>
    </nav>
  </header>
</Header>
`;

exports[`Storyshots Header Mobile 1`] = `
<Header
  header={
    Object {
      "history": Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "testkey",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "testkey",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      },
      "name": "File Submission",
    }
  }
>
  <header>
    <nav
      className="container-fluid navbar navbar-expand-lg navbar-dark"
    >
      <div
        aria-labelledby="title"
        className="navbar-brand pointer"
      />
      <img
        alt="B.C. Government Logo"
        className="img-fluid d-none d-md-block pointer"
        height="44"
        onClick={[Function]}
        onKeyDown={[Function]}
        src="undefined/images/bcid-logo-rev-en.svg"
        width={181}
      />
      <img
        alt="B.C. Government Logo"
        className="img-fluid d-md-none pointer"
        height="44"
        onClick={[Function]}
        onKeyDown={[Function]}
        src="undefined/images/bcid-symbol-rev.svg"
        width={64}
      />
      <div
        aria-labelledby="title"
        className="pointer navbar-brand nav-item nav-link"
      />
      <div
        className="navbar-brand"
        id="title"
      >
        File Submission
      </div>
    </nav>
  </header>
</Header>
`;

exports[`Storyshots Input Editable White 1`] = `
<Input
  input={
    Object {
      "id": "textInputId",
      "isRequired": true,
      "label": "Submission ID",
      "placeholder": "Enter id",
      "styling": "editable_white",
    }
  }
  onChange={[Function]}
>
  <div>
    <label
      className="label"
      htmlFor="textInputId"
    >
      <div
        className="textinput_label"
      >
        Submission ID
      </div>
      <span
        className="mandatory"
        id="asterisk"
      >
        *
      </span>
       
      <span
        className="note"
      />
    </label>
    <input
      className="editable_white"
      id="textInputId"
      onChange={[Function]}
      placeholder="Enter id"
      type="text"
    />
    <br />
    <span
      className="error"
    />
  </div>
</Input>
`;

exports[`Storyshots Input Editable White Mobile 1`] = `
<Input
  input={
    Object {
      "id": "textInputId",
      "isRequired": true,
      "label": "Submission ID",
      "placeholder": "Enter id",
      "styling": "editable_white",
    }
  }
  onChange={[Function]}
>
  <div>
    <label
      className="label"
      htmlFor="textInputId"
    >
      <div
        className="textinput_label"
      >
        Submission ID
      </div>
      <span
        className="mandatory"
        id="asterisk"
      >
        *
      </span>
       
      <span
        className="note"
      />
    </label>
    <input
      className="editable_white"
      id="textInputId"
      onChange={[Function]}
      placeholder="Enter id"
      type="text"
    />
    <br />
    <span
      className="error"
    />
  </div>
</Input>
`;

exports[`Storyshots Loader Mobile 1`] = `
<Loader
  page={true}
>
  <div
    className="loader-align"
  >
    <div
      className="page-loader"
    />
    <br />
    Loading... Please Wait
  </div>
</Loader>
`;

exports[`Storyshots Loader Page 1`] = `
<Loader
  page={true}
>
  <div
    className="loader-align"
  >
    <div
      className="page-loader"
    />
    <br />
    Loading... Please Wait
  </div>
</Loader>
`;
